# trend-scout

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/presentation/: README.md  trend_scout_final_project.pptx
examples/: README.md  cost_measurement.txt  daily_run_events_2026-07-19.txt  digest_2026-07-17.md  digest_daily_2026-07-19.md  digest_weekly_2026-07-19.md  fail_closed_demo.py  fail_closed_demo_output.txt  final_notebook_run_2026-07-19.txt  guardrail_demo.py  guardrail_demo_output.txt  measure_cost.py  run_log_2026-07-17.txt  telegram_post_2026-07-19.html
notebooks/: trend_scout_colab.ipynb
scripts/: refresh_notebook.py
src/trend_scout/: __init__.py  __main__.py  config.py  graph.py  memory.py  nodes.py  prompts.py  publisher.py  sanitize.py  schemas.py  semantic.py  tools.py
tests/: test_cli.py  test_config.py  test_nodes.py  test_prompts.py  test_publisher.py  test_routing.py  test_sanitize.py  test_semantic_and_memory.py  test_tools.py
