[project]
name = "trend-scout"
version = "0.3.0"
description = "Daily AI digest for a Telegram channel: LangGraph orchestrator-workers pipeline with LLM-as-a-judge quality gate."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0,<2",
    "langchain-openai>=1.0,<2",
    "pydantic>=2.7,<3",
    "feedparser>=6.0,<7",
    "chromadb>=1.0,<2",
    "ddgs>=9,<10",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = ["build>=1", "pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[project.scripts]
trend-scout = "trend_scout.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
